[metadata]

name = python_fileserver
version = 1.0.0 -BETA 
author = Victor Kosgei 
author_email = victorkosgei254@gmail.com
description = Python file server, websockets, simple react server 
long_description = file:README.md 
long_description_content_type = text/markdown 
url = https://github.com/victorkosgei254/python_fileserver
classifiers = 
    Programming Language :: Python :: 3 
    LICENSE :: OSI Approved :: MIT License 
    Operating System :: OS Independent 

[options]

packages = find: 
python_requires = >=3.6 
include_package_data = True
